src/index.css
@import "tailwindcss";

:root {
  color-scheme: light only;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
  -webkit-text-fill-color: #374151 !important;
  transition: background-color 5000s ease-in-out 0s;
}

@theme {
  --color-primary: #755b00;
  --color-primary-container: #c49b1a;

  --color-background: #faf9f6;
  --color-surface: #faf9f6;
  --color-surface-variant: #e3e2e0;

  --color-surface-container: #efeeeb;
  --color-surface-container-low: #f4f3f1;
  --color-surface-container-lowest: #ffffff;
  --color-surface-container-high: #e9e8e5;
  --color-surface-container-highest: #e3e2e0;

  --color-on-surface: #1a1c1a;
  --color-on-surface-variant: #4e4635;

  --color-secondary: #635d5a;
  --color-secondary-container: #e6ded9;

  --color-tertiary: #715a3e;
  --color-tertiary-container: #b89c7b;

  --color-error: #ba1a1a;
  --color-error-container: #ffdad6;

  --color-outline: #7f7662;
  --color-outline-variant: #d1c5af;

  --color-inverse-primary: #eec142;

  --color-on-primary: #ffffff;
  --color-on-primary-container: #463500;
  --color-on-secondary: #ffffff;
  --color-on-background: #1a1c1a;
}

@layer base {
  .dark {
    --color-primary: #eec142;
    --color-primary-container: #a07c00;

    --color-background: #111311;
    --color-surface: #111311;
    --color-surface-variant: #2d2f2d;

    --color-surface-container: #1e201e;
    --color-surface-container-low: #191b19;
    --color-surface-container-lowest: #0c0e0c;
    --color-surface-container-high: #282a28;
    --color-surface-container-highest: #333533;

    --color-on-surface: #e2e3df;
    --color-on-surface-variant: #c5b9a7;

    --color-secondary: #b9b3af;
    --color-secondary-container: #3a3533;

    --color-tertiary: #d4b896;
    --color-tertiary-container: #4a3828;

    --color-error: #ffb4ab;
    --color-error-container: #93000a;

    --color-outline: #9c9180;
    --color-outline-variant: #4e4635;

    --color-inverse-primary: #755b00;

    --color-on-primary: #3e2e00;
    --color-on-primary-container: #ffd95e;
    --color-on-secondary: #1f1b19;
    --color-on-background: #e2e3df;
  }
}

@utility container {
  margin-inline: auto;
  padding-inline: 0.75rem;

  @media (width >= 40rem) {
    max-width: 38.75rem;
  }
  @media (width >= 48rem) {
    max-width: 45rem;
  }
  @media (width >= 64rem) {
    max-width: 60.9375rem;
  }
  @media (width >= 75rem) {
    max-width: 71.25rem;
  }
  @media (width >= 96rem) {
    max-width: 87.5rem;
  }
  @media (width >= 103rem) {
    max-width: 93.75rem;
  }
  @media (width >= 120rem) {
    max-width: 112.5rem;
  }
  @media (width >= 133rem) {
    max-width: 125rem;
  }
}

